# microgateway-custom-policy-template

./: .gitignore-template  AGENT.md  AGENTS-implementation.md  AGENTS.md  CLAUDE.md  Cargo-impl.toml  Cargo.toml  Dockerfile  Makefile  Makefile-implementation  README.md  cargo-generate.toml  kilonova.yaml  post-script.rhai  pre-script.rhai  readme-implementation.md  readme-template.md  renovate.json
.cargo/: config.toml
.github/: CODEOWNERS
.pdk/: README.md
.pdk/docs/: TABLE_OF_CONTENTS.md
.pdk/docs/examples/: AUTHENTICATION_POLICY.md  TRANSFORMATION_POLICY.md
.pdk/docs/faq/: FAQ.md
.pdk/docs/getting_started/: GETTING_STARTED.md
.pdk/docs/reference/: CONFIGURATION.md  DW_EXPRESSION_EVALUATION.md  DW_SUPPORTED_OPERATIONS.md  EVENT_DATA.md  HTTP_CLIENT.md  LOGGING.md  SENDING_HTTP_RESPONSES.md
.pdk/docs/release_notes/: RELEASE_NOTES.md
.pdk/docs/useful_links/: USEFUL_LINKS.md
.pdk/header-injection-lite/: Cargo.toml  README.md  manifest.yaml
.pdk/header-injection-lite/src/: config.rs  lib.rs
.pdk/pdk/: Cargo.toml
.pdk/simple-oauth2-validation/: Cargo.toml  README.md  manifest.yaml
.pdk/simple-oauth2-validation/src/: config.rs  error.rs  introspection.rs  lib.rs
playground/: docker-compose.yaml
playground/config/: api.yaml
src/: lib.rs
test/: docker-compose.yaml
test/config/: api.yaml
tests/: common.rs  requests.rs
tests/common/: README.md  mod.rs
tests/config/: logging.yaml
tests/config/requests/: api.yaml
tests/requests/hello/: api.yaml
