# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "{{ crate_name }}"
version = "{{ asset-version }}"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdk = { version = "0.1.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0.64"

[lib]
crate-type = ["cdylib"]
