# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "{{ crate_name }}"
version = "{{ asset-version }}"
rust-version = "1.87.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "{{ group-id }}"
definition_asset_id = "{{ project-name }}"
implementation_asset_id = "{{ implementation-asset-id }}"

[dependencies]
pdk = { version = "{{ pdk_version | default: "test15-1.6.1-rc.0" }}", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "{{ pdk_version | default: "test15-1.6.1-rc.0" }}", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
