# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "header-injection-lite"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
pdk = { path = "../pdk/pdk", package = "pdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0.64"
