# Copyright 2023 Salesforce, Inc. All rights reserved.
[workspace]

members = [
    "classy",
    "pdk",
    "pdk-core",
    "pdk-macros",
    "pel",
    "pel-binding"
]

[workspace.package]
version = "1.0.0-beta-SNAPSHOT"
edition = "2018"
rust-version = "1.65.0"

[workspace.dependencies]
proxy-wasm = "0.2.0"
futures = "0.3"
getrandom = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = "1.0"

[profile.dev]
lto = "fat"     # Performs "fat" LTO which attempts to perform optimizations across all crates within the dependency graph

[profile.release]
opt-level = "z" # optimize for binary size, but also turn off loop vectorization
debug = 0       # no debug info at all (NOTE: unfortunately, this setting has no effect)
lto = "fat"     # Performs "fat" LTO which attempts to perform optimizations across all crates within the dependency graph
